# draw-machine

./: .gitignore  CMakeLists.txt
include/: window.h
include/primitives/: drawable.h  shape.h  triangle.h
include/utils/: model.h  movable.h  texture.h
primitives/: CMakeLists.txt  shape.cpp  triangle.cpp
sketch/: CMakeLists.txt  transformations.cpp
src/: CMakeLists.txt  glad.c  main.cpp  window.cpp  window.h
src/algorithms/: transformations.h
src/glad/: CMakeLists.txt  glad.h
src/include/glad/: glad.h
src/include/primitives/: Triangle.h  drawable.h  drawable3D.h  shape.h
src/include/utils/: movable.h
src/primitives/: CMakeLists.txt  Triangle.cpp  drawable.cpp  drawable3D.cpp  movable.cpp  shape.cpp  shape.h
src/shaders/: fragment1.glsl  fragmentT.glsl  vertex2.glsl
src/utils/: CMakeLists.txt  Texture.cpp  vertices.cpp
utils/: CMakeLists.txt  movable.cpp  shaders.cpp  texture.cpp
